[project]
name = "rl-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gym>=0.26.2",
    "gymnasium[classic-control]>=1.2.3",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "nasim[dqn]>=0.12.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "stable-baselines3>=2.8.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
